# MR2022

./: .gitignore  CMakeLists.txt  LICENSE  main.c
0/: topics.org
Alexey_Orehov/: CMakeLists.txt  main.cpp  matrix.c  task1.c
Alexey_Orehov/abstract_data_types/2-linked_list/: list.h
Alexey_Orehov/abstract_data_types/FSM/: FSM.h
Alexey_Orehov/abstract_data_types/binary_tree/: tree.h
Alexey_Orehov/abstract_data_types/dynamic_array/: dynamic_array.h
Alexey_Orehov/abstract_data_types/graph/: graph.h
Alexey_Orehov/abstract_data_types/queue/: queue.h
Alexey_Orehov/abstract_data_types/stack/: stack.h
Alexey_Orehov/alicebob/: task1.c
Alexey_Orehov/matrix_calc/: main.c  matrix.c  matrix_lib.c  matrix_lib.h
Alexey_Orehov/matrix_calc_templates/: Matrix.cpp  Matrix.h  tests.cpp
Alexey_Orehov/matrix_calcpp/: Matrix.cpp  Matrix.h  tests.cpp
Alexey_Orehov/matrix_inheritance/: Matrix.cpp  Matrix.h  tests.cpp
Anya_Leshchyova/: main.cpp  test
Arseny_Lenskiy/: main.c
Artyom_Puzikov/: Matrix.c  main.c
Bogdashevskaya_Alexandra/: BobAlice.c  Templates.cpp  matrix.c  matrixplusplus.cpp
Boyko_Alexander/: Ipoteka.c  README.md  main.c
Chanchikov_Dmitriy/: 00_Alice_and_Bob.c  01_Alice_and_Bob.c  CMakeLists.txt
Chanchikov_Dmitriy/2 sem/Cpp/: Binary Tree.cpp  CMakeLists.txt  Dynamic Array.cpp  Dynamic Array.h  Dynamic array.cpp  Graph.cpp  Linked List.cpp  Linked List.h  Priority Queue.cpp  Queue.cpp  Stack.cpp
Dmitriy Agranovskiy/: CMakeLists.txt
EidelmanRoman/: CMakeLists.txt  main.c  readme.txt
IgorVarlamov/: Source.c  Task_1.c  Task_1_1.c  Task_2.c  Task_3.cpp  Task_4.cpp
Ivan_Shevtsov/: README.md
JafarKovalenko/: dynamicArray.cpp  linkedList.cpp  main.c  tz.txt
KazantsevGeorgy/: MAtrix.c  MAtrix3.c  Matrix4.c  Matrix5.c  Matrix6.c  ipoteka(func_upgrade).c  ipoteka.c  main.c  task1
Kondratev_Artem/: .gitignore  CMakeLists.txt  Exception.h  main.c  matrix.c  mortgage.c
KonevIgor/: Final.c  main.c
Konovalova_Vasilisa/: DinArray.cpp  coursework.cpp  dynamic array.cpp  list.cpp  list1.cpp  matrix  matrix.c  matrixplusplus.cpp  queue.cpp  stack.cpp  template.cpp
Mashyanov_Konstantin/: main.c
Maxim_Gavrilenko/: main.c  task1.c  task_1.c
MerzlyakovaIuliia/: list.cpp
PozdnyakovSergei/: AliceBob.c  AliceBob1.c  AliceBob2.c  List.cpp  Matrix.c  Matrix.cpp  Matrix1610.c  Matrix2.c  ipoteca.c  ipoteka.c  main.c  main.cpp
Pykhalov_Egor/: CMakeLists.txt  First_Task_Alice_and_Bob.c
Shchelkanova_Valentina/: CMakeLists.txt  main.c
ZorkinEvgenii/ADTs/: CMakeLists.txt
ZorkinEvgenii/ADTs/Dynamic_Array/: dynamicArray.h
ZorkinEvgenii/ADTs/Fenwick/: main.cpp
ZorkinEvgenii/ADTs/bynary_tree/: bynaryTree.h
ZorkinEvgenii/ADTs/queue/: queue.h
ZorkinEvgenii/ADTs/stack/: stack.h
ZorkinEvgenii/ADTs/two_linked_list/: twoLinkedList.h
(+916 files in other folders)
